<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_0">

    <TextView
        android:id="@+id/text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/code_was_send"
        android:textAlignment="center"
        android:textColor="@color/textGrayLight"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_send_again"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/send_again"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text"/>

    <EditText
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/black_transparent50"
        android:digits="0987654321"
        android:gravity="center_vertical"
        android:inputType="number"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:hint="@string/code_phone"
        android:textColorHint="@color/textGrayDark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>