<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_inset">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                android:id="@+id/status_on"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bt_white"
                android:gravity="center"
                android:text="@string/status_on_select"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/textGrayDark"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lineLightGray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pic" />

            <TextView
                android:id="@+id/status_home"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bt_white"
                android:gravity="center"
                android:text="@string/status_home_select"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/textGrayDark"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lineLightGray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pic" />

            <TextView
                android:id="@+id/status_off"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bt_white"
                android:gravity="center"
                android:text="@string/status_off_select"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/textGrayDark"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lineLightGray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pic" />

            <Button
                android:id="@+id/cansel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/colorAccent"
                android:text="@string/cancell"
                android:textColor="@color/buttonTextGray"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/status_off" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>